# mosaic-subnet

./: .gitignore  Dockerfile  client.py  docker-compose.yml  fleet.sh  pyproject.toml
docs/: quickstart.md
mosaic_subnet/: cli.py
mosaic_subnet/base/: __init__.py  _config.py  base.py  config.py
mosaic_subnet/gateway/: __init__.py  _config.py  agent.py  gateway.py
mosaic_subnet/miner/: __init__.py  _config.py  agent.py  diffusers_module.py  miner.py  model.py
mosaic_subnet/validator/: __init__.py  _config.py  agent.py  dataset.py  model.py  sigmoid.py  validator.py
scripts/: launch.sh
