[tool.poetry]
name = "mosaic-subnet"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "mosaic_subnet" }]
[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
typer = "^0.9.0"
rich = "^13.7.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
communex = "^0.1.16"
transformers = "^4.40.1"
accelerate = "^0.29.3"
httpx = "^0.27.0"
datasets = "^2.19.0"
loguru = "^0.7.2"
supervisor = "^4.2.5"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
arrow = "^1.3.0"
huggingface-hub = "^0.23.0"
huggingface-cli = "^0.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
